--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -13,7 +13,7 @@
                 <form method="post">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" name="username" class="form-control" required autocomplete="off">
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
@@ -21,7 +21,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" name="password" class="form-control" required autocomplete="new-password">
                     </div>
                     <div class="mb-3">
                         <label for="full_name" class="form-label">Full Name</label>
@@ -34,21 +34,6 @@
                     <div class="mb-3">
                         <label for="personal_id" class="form-label">Personal ID</label>
                         <input type="text" class="form-control" id="personal_id" name="personal_id" required>
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Account Type</label>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="role" id="role_renter" value="renter" checked>
-                            <label class="form-check-label" for="role_renter">
-                                Renter (I want to book homestays)
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="role" id="role_owner" value="owner">
-                            <label class="form-check-label" for="role_owner">
-                                Owner (I want to list my property)
-                            </label>
-                        </div>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Register</button>
                 </form>
