--- a/templates/renter/view_room_detail.html
+++ b/templates/renter/view_room_detail.html
@@ -39,23 +39,19 @@
                             {% endif %}
                             
                             <!-- Image navigation arrows -->
-                            {% if room.images|length > 1 %}
-                            <div class="position-absolute top-50 start-0 translate-middle-y">
-                                <button class="btn btn-light rounded-circle ms-2 gallery-nav" onclick="prevImage()">
-                                    <i class="bi bi-chevron-left"></i>
-                                </button>
-                            </div>
-                            <div class="position-absolute top-50 end-0 translate-middle-y">
-                                <button class="btn btn-light rounded-circle me-2 gallery-nav" onclick="nextImage()">
-                                    <i class="bi bi-chevron-right"></i>
-                                </button>
-                            </div>
+                            {% if room.images and room.images|length > 1 %}
+                            <!-- Left arrow (pure CSS) -->
+                            <div class="position-absolute top-50 start-0 translate-middle-y arrow-left" onclick="prevImage()"></div>
+
+                            <!-- Right arrow (pure CSS) -->
+                            <div class="position-absolute top-50 end-0 translate-middle-y arrow-right" onclick="nextImage()"></div>
                             {% endif %}
                             
                             <!-- Fullscreen button -->
                             <div class="position-absolute bottom-0 end-0 m-3">
-                                <button class="btn btn-sm btn-light" onclick="openFullscreen()">
-                                    <i class="bi bi-fullscreen"></i>
+                                <button class="btn btn-sm btn-light d-flex align-items-center" onclick="openFullscreen()">
+                                    <i class="bi bi-fullscreen me-1"></i>
+                                    Gallery
                                 </button>
                             </div>
                         {% else %}
